# authenticated-attributes

./: .eslintrc.json  .gitignore  Dockerfile  LICENSE  README.md  demo.js  docker-compose.yml  example.env  gendocs.sh  package-lock.json  package.json  server.js
.githooks/: pre-commit
docs/: database.md  http.md  http_example.md  lib.md  lib_template.hbs  schema.md  vc.md
hyperbee/: .eslintrc.json  .gitignore  demo-get.js  demo.js  demokey.pem  example.env  example.mjs  import.js  package-lock.json  package.json  server.js  server.mjs  taiwan-csv-import.js  test-cbor.js
hyperbee/demo/: demo-get.mjs  demo.mjs  import.mjs  package-lock.json  package.json  test-cbor.mjs
hyperbee/demo/src/: dbGet.mjs  (+6 more)
hyperbee/server/: index.js  package-lock.json  package.json
hyperbee/src/: dbGet.js  dbPut.js  dbPut.mjs  dbUpgrade.js  decryptValue.js  decryptValue.mjs  encodeAttestation.js  encryptValue.js  index.js  makeKey.js  makeKey.mjs  otsTimestamp.js  path.js  signAttestation.js  timestamp.js  vc.js  verifySignature.js  version.js
src/: dbIndex.js  dbManager.js  dbPut.js  dbUpgrade.js  encryptValue.js  index.js  makeKey.js  otsTimestamp.js  signAttestation.js  verifySignature.js  version.js
uwazi/: add_cids.py  client.js  entity_page.html  example.env
uwazi/entity-page/: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  svelte.config.js  sw.js  vite.config.js
uwazi/metadata-manager/: .gitignore  example.env  main.py  pyproject.toml  requirements.txt  run
uwazi/metadata-manager/metadata_manager/: __main__.py  config.py  entity.py  template.py
(+19 files in other folders)
